--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
 sample.py
-config.ini
+# Folder view configuration files
+.DS_Store
+Desktop.ini
+
+# Thumbnail cache files
+._*
+Thumbs.db
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
+
+# Compiled Python files
 *.pyc
+
+# Application specific files
+venv
+node_modules
+.sass-cache
+config.ini
