--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
 configparser==3.3.0.post2
+Flask==0.10.1
 httplib2==0.9.2
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
 oauth2==1.0.0
 oauthlib==1.0.3
 requests==2.9.1
 requests-oauthlib==0.6.0
+Werkzeug==0.11.3
+wheel==0.29.0
